components/infra/argocd/overlays/dev/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - "devargocd.developers.facilities.rl.ac.uk"
    secretName: developers-tls-certificate
  rules:
  - host: "devargocd.developers.facilities.rl.ac.uk"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
