components/infra/argocd/overlays/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
spec:
  hostnames:
    - "devargocd.developers.facilities.rl.ac.uk"
